<resources>
    <string name="app_name">4Gamers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_name">Game Name</string>
    <string name="game_genre">Game Genre</string>
    <string name="game_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="game_platform">Game Platform</string>
    <string name="placeholder_developer">Developer</string>
    <string name="game_developer">Game Developer</string>
    <string name="release_date">Release Date</string>
    <string name="date">01/01/2020</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="go_to_website">Go to Website</string>
    <string name="title_categories">Categories</string>
    <string name="back"><![CDATA[<]]></string>
</resources>