<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.GameDetailActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_game_detail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@color/placeholder"
        app:shapeAppearanceOverlay="@style/BottomCornerRounded"/>

    <TextView
        android:id="@+id/tv_game_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        app:layout_constraintTop_toBottomOf="@+id/iv_game_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/tv_game_detail_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_genre"
        app:layout_constraintTop_toBottomOf="@+id/iv_game_detail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/tv_placeholder_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_developer"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/tv_game_detail_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_developer"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_detail_name"
        app:layout_constraintStart_toEndOf="@+id/tv_placeholder_developer"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>