<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_game"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@color/placeholder" />

        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_game"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/game_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/tv_game_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_game"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/game_genre"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/tv_game_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/game_description"/>

        <TextView
            android:id="@+id/tv_game_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/game_platform"
            android:layout_margin="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>