<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="1dp"
    android:layout_margin="12dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_fav_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_fav_game"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:background="@drawable/corner_images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@color/placeholder"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/tv_fav_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_name"
            app:layout_constraintStart_toEndOf="@+id/iv_fav_game"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"/>

        <TextView
            android:id="@+id/tv_fav_game_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_developer"
            app:layout_constraintStart_toEndOf="@+id/iv_fav_game"
            app:layout_constraintTop_toBottomOf="@+id/tv_fav_game_name"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:fontFamily="@font/open_sans"/>

        <ToggleButton
            android:id="@+id/tbtn_favorite_game"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:textOn=""
            android:textOff=""
            android:checked="true"
            android:background="@drawable/favorite_selector"/>

        <Button
            android:id="@+id/btn_favorite_game_go_website"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/go_to_website"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/iv_fav_game"
            app:layout_constraintTop_toBottomOf="@id/tv_fav_game_developer"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/game_genre_box"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>